# block-maker

./: CMakeLists.txt  README.md
cmake/: Macros.cmake
include/block-maker/: Block.hpp
include/block-maker/AttributeTransformer/: CoordTransformer.hpp  PhysicCoordTransformer.hpp
include/block-maker/Debug/: DebugDraw.hpp  DebugWorld.hpp
include/block-maker/Loader/: Buffer.hpp  Buffer.inl  File.hpp
include/block-maker/Loader/Xml/: NodeExtractor.hpp  NodeExtractor.inl  NodeSeeker.hpp  NodeSeeker.inl  Xml.hpp  Xml.inl
include/block-maker/Physic/: BlockFixtureFactory.hpp  BlockSpawner.hpp  Fixture.hpp  RandomBlockSpawner.hpp  ShapePositionScaler.hpp
include/block-maker/Physic/BodySpawner/: BlockBodySpawner.hpp  BlockBodySpawner.inl  RandomBlockBodySpawner.hpp  RandomBodySpawner.hpp
include/block-maker/Physic/FixtureFactory/: BasicFixtureFactory.hpp  BasicFixtureFactory.inl  BoxBlock.hpp  ConvexShapeFactory.hpp  FileFixtureFactory.hpp  FileFixtureFactory.inl  FixtureFactory.hpp  HalfPlusBlock.hpp  IBlock.hpp  LBlock.hpp  NBlock.hpp  OBlock.hpp  PlusBlock.hpp  RectShapeFactory.hpp  ShapeFactory.hpp  TBlock.hpp  UBlock.hpp
include/block-maker/RandomGenerator/: RandomGenerator.hpp
include/block-maker/Render/: BodyShape.hpp  Renderable.hpp  RenderableEntity.hpp  Shape.hpp
include/block-maker/Render/ShapeComposite/: ShapeArray.hpp  ShapeComposite.hpp
include/block-maker/Render/ShapeCompositeFactory/: ShapeArrayFactory.hpp  ShapeCompositeFactory.hpp
include/block-maker/Render/ShapeCreator/: RenderableCircleCreator.hpp  RenderablePolygonCreator.hpp  RenderableShapeCreator.hpp  RenderableShapeCreator.inl
include/block-maker/Resource/: ResourceIdentifier.hpp
include/block-maker/Resource/Binder/: FileResource.hpp  FileResource.inl  XmlResource.hpp
include/block-maker/Resource/Holder/: TypeIndexKeyContainer.hpp
resources/xml/: BlockPhysicAttributes.xml  SegmentsTextureRects.xml
src/: CMakeLists.txt
src/block-maker/: Block.cpp
src/block-maker/AttributeTransformer/: PhysicCoordTransformer.cpp
src/block-maker/Debug/: DebugDraw.cpp  DebugWorld.cpp
src/block-maker/Physic/: RandomBlockSpawner.cpp  ShapePositionScaler.inl
src/block-maker/Physic/BodySpawner/: BlockBodySpawner.cpp  RandomBlockBodySpawner.cpp  RandomBlockBodySpawner.inl
src/block-maker/Physic/FixtureFactory/: BoxBlock.cpp  FileFixtureFactoryBuilder.inl  HalfPlusBlock.cpp  IBlock.cpp  LBlock.cpp  NBlock.cpp  OBlock.cpp  PlusBlock.cpp  RectShapeFactory.cpp  TBlock.cpp  UBlock.cpp
src/block-maker/Render/: BodyShape.cpp
src/block-maker/Render/ShapeComposite/: ShapeArray.cpp
src/block-maker/Render/ShapeCompositeFactory/: ShapeArrayFactory.cpp
src/block-maker/Render/ShapeCreator/: RenderableCircleCreator.cpp  RenderablePolygonCreator.cpp
test/: CMakeLists.txt  LibIntegrationTest.cpp  maintest.cpp
test/Loader/: BufferTest.cpp  FileLoaderMock.hpp  XmlLoaderTest.cpp
test/Physic/: FakeBodySpawner.hpp  FileFixtureFactoryMock.hpp  FixtureFactoryMock.hpp  RectShapeFactoryTest.cpp  ShapeFactoryMock.hpp
test/Render/: RenderableCircleCreatorTest.cpp  RenderablePolygonCreatorTest.cpp  ShapeArrayTest.cpp  ShapeCreatorMock.hpp  ShapeMock.hpp
test/ResourceBinder/: FileResourceBinderTest.cpp
test/resources/: TxtTest.txt  XmlTest.xml
